--- a/src/sass/lib/_perfect-scrollbar.scss
+++ b/src/sass/lib/_perfect-scrollbar.scss
@@ -20,7 +20,9 @@
 
 .ps.ps--active-x > .ps__scrollbar-x-rail, .ps.ps--active-y > .ps__scrollbar-y-rail {
   display: block;
-  background-color: #87D0E9;
+  width: 20px;
+  border-radius: 10px;
+  background-color: #EDEDED;
 }
 
 .ps.ps--in-scrolling.ps--x > .ps__scrollbar-x-rail {
@@ -80,7 +82,6 @@
   -moz-transition: background-color .2s linear, opacity .2s linear;
   transition: background-color .2s linear, opacity .2s linear;
   right: 0;
-  width: 3px
 }
 
 .ps > .ps__scrollbar-y-rail > .ps__scrollbar-y {
@@ -93,12 +94,14 @@
   transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, border-radius .2s ease-in-out;
   transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, border-radius .2s ease-in-out, -webkit-border-radius .2s ease-in-out, -moz-border-radius .2s ease-in-out;
   right: 0;
-  width: 3px
+  width: 20px;
+  border-radius: 10px;
+  background-color: #00b5b4;
 }
 
-.ps > .ps__scrollbar-y-rail:hover > .ps__scrollbar-y, .ps > .ps__scrollbar-y-rail:active > .ps__scrollbar-y {
-  width: 11px
-}
+//.ps > .ps__scrollbar-y-rail:hover > .ps__scrollbar-y, .ps > .ps__scrollbar-y-rail:active > .ps__scrollbar-y {
+//  width: 11px
+//}
 
 .ps:hover.ps--in-scrolling.ps--x > .ps__scrollbar-x-rail {
   background-color: #eee;
@@ -109,19 +112,19 @@
   height: 11px
 }
 
-.ps:hover.ps--in-scrolling.ps--y > .ps__scrollbar-y-rail {
-  background-color: #eee;
-}
+//.ps:hover.ps--in-scrolling.ps--y > .ps__scrollbar-y-rail {
+//  background-color: #eee;
+//}
 
-.ps:hover.ps--in-scrolling.ps--y > .ps__scrollbar-y-rail > .ps__scrollbar-y {
-  background-color: #999;
-  width: 11px
-}
+//.ps:hover.ps--in-scrolling.ps--y > .ps__scrollbar-y-rail > .ps__scrollbar-y {
+//  background-color: #999;
+//  width: 11px
+//}
 
-.ps:hover > .ps__scrollbar-x-rail:hover > .ps__scrollbar-x {
-  background-color: #999
-}
+//.ps:hover > .ps__scrollbar-x-rail:hover > .ps__scrollbar-x {
+//  background-color: #999
+//}
 
 .ps:hover > .ps__scrollbar-y-rail:hover > .ps__scrollbar-y {
-  background-color: #999
+  background-color: darken(#00b5b4, 3);
 }
