--- a/src/templates/page.jade
+++ b/src/templates/page.jade
@@ -3,7 +3,7 @@ title: Smart City
 ---
 extends layouts/_layout
 block content
-	+b.SECTION.section._screen._has-decor
+	+b.SECTION.section._has-decor
 		+e.top._color-1
 			+e.container.container
 				+e.H2.title.title-lg 13 июня 2017
