--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,4 +1,5 @@
 .section
+	height: 1080px
 	background-color: #fbfbfb
 	&__top
 		position: relative
@@ -46,9 +47,6 @@
 			height: 160px
 			background: url(../img/bg/section_decor-bot.svg) no-repeat top center/cover
 			content: ''
-	&_screen
-		height: 100vh
-		
 .event
 	display: flex
 	flex-direction: column
@@ -80,7 +78,7 @@
 .table-wrapper
 	max-width: 1760px
 	margin: 0 auto
-	padding: 30px 0
+	padding: 60px 0 0
 .event-table
 	font-size: 14px
 	overflow: hidden
@@ -107,8 +105,9 @@
 		width: 100%
 		max-width: 1720px
 		box-shadow: 0 5px 15px rgba(0, 0, 0, 0.04)
-		border-radius: 4px
+		border-radius: 0 0 4px 4px
 		background: #fff
+		overflow: hidden
 		.event-table__cell
 			padding: 25px 0
 	&__row
