--- a/src/templates/page.jade
+++ b/src/templates/page.jade
@@ -267,3 +267,45 @@ block content
 							+e.cell Фролова В.Ю.
 							+e.cell да
 							+e.cell проектор, экран, доступ в Интернет
+
+	+b.SECTION.section._has-triangle
+		+e.in
+			+b.program
+				+e.top
+					+e.H2.title программа мероприятий
+				+e.item
+					+e.item-date 01.06.2017
+					+e.item-time 11:00-13:00
+					+e.item-text Электронные сервисы для участников
+						+e.BR
+						| имущественных торгов
+				+e.item
+					+e.item-date 01.06.2017
+					+e.item-time 14:30-18:00
+					+e.item-text._fs Школа юного инвестора
+				+e.item
+					+e.item-date 02.06.2017
+					+e.item-time 10:00-12:00
+					+e.item-text Электронные сервисы и порядок участия в электронных торгах по 44-ФЗ, 223-ФЗ. Подготовка документов и аккредитация участников на электронной площадке
+				+e.item
+					+e.item-date 02.06.2017
+					+e.item-time 14:30-18:00
+					+e.item-text._fs Школа юного инвестора
+				+e.item
+					+e.item-date 06.06.2017
+					+e.item-time 14:00-16:00
+					+e.item-text Коммерческие закупки, 223-ФЗ. Электронные торги и документооборот на ЕЭТП. Особенности и дополнительные возможности функционала ЕЭТП.
+			+e.in-lines
+		+e.triangle
+
+	+b.SECTION.section._has-triangle._has-triangle-2
+		+b.announce
+			+e.in
+				+e.time
+					+e.TIME.time-date 13 июня 2017
+					+e.time-hour 14:00-16:00
+				+e.H2.title Национальная электронная площадка
+				+e.P.text Получение ЭП в УЦ ЕЭТП.
+				+e.P.text Аккредитация участников на ЕЭТП.
+				+e.P.text Возможности обучения с получением сертификатов государственного образца
+		+e.triangle
